# Digital-Analysis-of-Fingerprints

./: CMakeCache.txt  CMakeLists.txt  Doc.sh  Geometric.sh  Makefile  Pressure.sh  README.txt  Rotation.sh  cmake_install.cmake  main.cpp
docs/: Doxyfile
docs/latex/: doc.sh
sources/: blur.cpp  blur.h  main.cpp  main_1.cpp  main_1.h  starter3.cpp  starter_1.cpp  starter_1.h
src/: CMakeLists.txt
src/files/: Rotation.cpp  elliptical_modelling.cpp  main2.cpp  main_1.cpp  starter2.cpp  starter3.cpp  starter_1.cpp  starter_4.cpp
src/headers/: Rotation.h  blur.h  elliptical_modelling.h  main2.h  main_1.h  morphological_filtering.cpp  morphological_filtering.h  starter2.h  starter3.h  starter_1.h  starter_4.h
tests/: CMakeLists.txt  Makefile  anisotropic_test.cpp  cmake_install.cmake  complexity_convol.py  complexity_rotation.py  demo_main1.cpp  test_1.cpp  test_3.cpp  test_FFT_img.cpp  test_IFFT_img.cpp  test_complexite.cpp  test_complexity_rotation.cpp  test_convol.cpp  test_convol_fft.cpp  test_convol_shifted.cpp  test_convol_xy.cpp  test_deconvol.cpp  test_elasticity.cpp  test_geom.cpp  test_geom_advanced.cpp  test_morpho.cpp  test_rotation.cpp  test_rotation_accuracy.cpp  test_starter_4.cpp
